test-suite/typecheck/pass/string_concat.first
function f(a: String, b: String) -> String {
  return a + b;
}
