test-suite/typecheck/fail/type_not_found.first
function f() -> NoSuchType {
  return 0;
}
